--- a/Moduo1/Client/MainWindow.xaml
+++ b/Moduo1/Client/MainWindow.xaml
@@ -5,22 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Client"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="850">
+        WindowStyle="None" AllowsTransparency="True"
+        Title="EEP" Height="600" Width="900" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" AllowDrop="True" MouseDown="Window_MouseDown">
     <Grid>
-        <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="569" VerticalAlignment="Top" Width="842" Background="#FFEFFBFB">
-            <TabItem Height="0">
-                <Grid Background="#FF18A6A6" Margin="0,0,-13,-4">
-                    <Label x:Name="passwordLabel" Content="Password:" Height="37" Width="137" Margin="246,263,447,256" Background="#FF18A6A6"/>
-                    <Label x:Name="usernameLabel" Content="Username:" Height="37" Width="137" Margin="246,221,447,298" Background="#FF18A6A6"/>
-                    <TextBox x:Name="usernameBox" HorizontalAlignment="Left" Height="25" Margin="388,221,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="163" TextChanged="usernameTextChanged"/>
-                    <PasswordBox x:Name="passwordBox" HorizontalAlignment="Left" Height="25" Margin="388,263,0,0" VerticalAlignment="Top" Width="163" PasswordChanged="passwordBox_PasswordChanged"/>
-                    <Button x:Name="logInButton" Content="Sign In" Height="37" IsEnabled="False" Width="86" Margin="349,316,395,203" Click="logInButton_Click" Background="#FFD4DBDE" FontWeight="Bold"/>
-                    <Label x:Name="logInWarningLabel" Content="" HorizontalAlignment="Left" Margin="220,403,0,0" VerticalAlignment="Top" Width="399" FontSize="14"/>
+        <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="603" VerticalAlignment="Top" Width="900" Background="#FFEFFBFB" Margin="0,-3,0,0" BorderThickness="1">
+            <TabItem Height="0" Margin="0,0,0,0" >
+                <Grid Background="#FFBFE9F0" Margin="0,0,0,0">
+                    <Label x:Name="passwordLabel" HorizontalContentAlignment="Left" VerticalContentAlignment="Bottom" Content="Password:" Width="130" Margin="310,207,452,360" VerticalAlignment="Center" Height="25" Foreground="#FF1F3270" RenderTransformOrigin="0.523,-0.2"/>
+                    <Label x:Name="usernameLabel" HorizontalContentAlignment="Left" VerticalContentAlignment="Bottom" Content="Username:" Width="130" Margin="310,177,0,388" HorizontalAlignment="Left" VerticalAlignment="Center" Height="25"  Foreground="#FF1F3270"/>
+                    <TextBox x:Name="usernameBox" HorizontalAlignment="Left" Text="" Height="25" Margin="445,178,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="150" TextChanged="usernameTextChanged" Background="#FFFAFBFE" BorderThickness="0"/>
+                    <PasswordBox x:Name="passwordBox" HorizontalAlignment="Left"   Height="25" Margin="445,207,0,0" VerticalAlignment="Top" Width="150" PasswordChanged="passwordBox_PasswordChanged" Background="#FFFAFBFE" BorderThickness="0"/>
+                    <Button x:Name="logInButton" Content="Sign In" IsEnabled="True" Margin="545,251,297,317" Click="logInButton_Click" Background="#FFFAFBFE" FontWeight="Bold" Foreground="#FF1F3277" BorderBrush="#FFABADB3" BorderThickness="0"/>
+                    <Label x:Name="logInWarningLabel" Content="" HorizontalAlignment="Center" Margin="228,345,215,190" VerticalAlignment="Center" Width="444" FontSize="14" Height="60" HorizontalContentAlignment="Center"/>
                 </Grid>
             </TabItem>
             <TabItem Height="0" Focusable="True">
-                <Grid Background="#FF18A6A6">
-                    <TabControl x:Name="tabControl1" Margin="10,73,10,20" Focusable="True">
+                <Grid  Background="#FFBFE9F0" Margin="0,-2,-2,0">
+                    <TabControl x:Name="tabControl1" Margin="10,75,10,25" Focusable="True" BorderBrush="#FFBFE9F0">
                         <TabItem Header="Home" Margin="-2,10,-21,-10" Height="39" Focusable="True">
                             <Grid Background="#FFF7F7F7" Margin="0,16,0,0" Focusable="True">
                                 <Label Content="Name:" HorizontalAlignment="Left" Margin="10,62,0,0" VerticalAlignment="Top" Width="142" FontSize="14"/>
@@ -34,8 +35,8 @@
                             </Grid>
                         </TabItem>
                         <TabItem Header="Employees" Margin="21,10,-49,-10" Height="39" Focusable="True">
-                            <Grid Background="#FFF7F7F7" Margin="0,17,0,0" Focusable="True">
-                                <DataGrid x:Name="employeesDataGrid" HorizontalAlignment="Left" Margin="10,32,0,0" 
+                            <Grid  Background="#FFF7F7F7" Margin="0,17,0,0" Focusable="True">
+                                <DataGrid x:Name="employeesDataGrid" HorizontalAlignment="Left" Margin="39,33,0,0" 
                                           VerticalAlignment="Top" Height="359" Width="790" Background="#FFDDDDDD"
                                           IsReadOnly="True" CanUserAddRows="False" ItemsSource="{Binding}"
                                           AutoGenerateColumns="False" CanUserReorderColumns="False" CanUserResizeRows="False"
@@ -62,7 +63,7 @@
                         </TabItem>
                         <TabItem Header="Companies" Margin="49,10,-72,-10" Height="39" Focusable="True">
                             <Grid Background="#FFF7F7F7" Margin="0,17,0,0" Focusable="True">
-                                <DataGrid x:Name="companiesDataGrid" HorizontalAlignment="Left" Margin="10,32,0,0" 
+                                <DataGrid x:Name="companiesDataGrid" HorizontalAlignment="Left" Margin="39,33,0,0" 
                                           VerticalAlignment="Top" Height="359" Width="790" Background="#FFDDDDDD"
                                           IsReadOnly="True" CanUserAddRows="False" ItemsSource="{Binding}"
                                           AutoGenerateColumns="False" CanUserReorderColumns="False" CanUserResizeRows="False"
@@ -85,7 +86,7 @@
                         </TabItem>
                         <TabItem Header="Projects" Margin="0,10,-68,-10" HorizontalAlignment="Right" Width="70" Height="39" Focusable="True">
                             <Grid Background="#FFF7F7F7" Margin="0,17,0,0" Focusable="True">
-                                <DataGrid x:Name="DataGridUserStories" HorizontalAlignment="Left" Margin="332,32,0,0" 
+                                <DataGrid x:Name="DataGridUserStories" HorizontalAlignment="Left" Margin="365,32,0,0" 
                                           VerticalAlignment="Top" Height="359" Width="468" Background="#FFDDDDDD"
                                           IsReadOnly="True" CanUserAddRows="False" ItemsSource="{Binding}"
                                           AutoGenerateColumns="False" CanUserReorderColumns="False" CanUserResizeRows="False"
@@ -107,14 +108,14 @@
                                         <DataGridTextColumn Width="*" Header="AcceptanceCriteria" Binding="{Binding AcceptanceCriteria}" Foreground="#FF16253E" FontWeight="Bold"/>
                                     </DataGrid.Columns>
                                 </DataGrid>
-                                <TextBox x:Name="textBoxProjects" HorizontalAlignment="Left" Height="294" Margin="10,97,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="299"/>
-                                <Label Content="Select project:" HorizontalAlignment="Left" Margin="0,3,0,0" VerticalAlignment="Top" Width="141" FontSize="14"/>
-                                <ComboBox x:Name="comboBoxProjects" HorizontalAlignment="Left" Margin="10,32,0,0" VerticalAlignment="Top" Width="299" Height="43" ItemsSource="{Binding}" DisplayMemberPath="Name" SelectionChanged="comboBoxProjects_SelectionChanged"/>
+                                <TextBox x:Name="textBoxProjects" HorizontalAlignment="Left" Height="294" Margin="37,97,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="299"/>
+                                <Label Content="Select project:" HorizontalAlignment="Left" Margin="37,3,0,0" VerticalAlignment="Top" Width="141" FontSize="14"/>
+                                <ComboBox x:Name="comboBoxProjects" HorizontalAlignment="Left" Margin="37,32,0,0" VerticalAlignment="Top" Width="299" Height="43" ItemsSource="{Binding}" DisplayMemberPath="Name" SelectionChanged="comboBoxProjects_SelectionChanged"/>
                             </Grid>
                         </TabItem>
                         <TabItem x:Name="workTabItem" Header="Work" Margin="0,10,-68,-10" HorizontalAlignment="Right" Width="77" Height="39" Focusable="True">
                             <Grid Background="#FFF7F7F7" Margin="0,17,0,1" Focusable="True">
-                                <TabControl x:Name="tabControlCEO" HorizontalAlignment="Left" Height="359" VerticalAlignment="Top" Width="790">
+                                <TabControl x:Name="tabControlCEO" HorizontalAlignment="Left" Height="359" VerticalAlignment="Top" Width="790" Margin="39,38,0,0">
                                     <TabItem x:Name="tabItemEmployees" Header="Employees" Height="39">
                                         <Grid Background="#FFF7F7F7">
                                             <DataGrid x:Name="dataGridCEO" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="175" Width="470" Background="#FFDDDDDD"
@@ -148,7 +149,7 @@
                                                 <TextBox x:Name="textBoxSurnameCEO" HorizontalAlignment="Left" Height="21" Margin="56,114,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="153"/>
                                                 <TextBox x:Name="textBoxEmailCEO" HorizontalAlignment="Left" Height="21" Margin="75,88,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="134"/>
                                                 <ComboBox x:Name="comboBoxPositionCEO" HorizontalAlignment="Left" Height="24" Margin="75,207,0,0" VerticalAlignment="Top" Width="134"/>
-                                                <Button x:Name="buttonAddEmployeeCEO" Content="Add" HorizontalAlignment="Left" Height="31" Margin="210,250,0,0" VerticalAlignment="Top" Width="61" Click="AddEmployeeButton_Click"/>
+                                                <Button x:Name="buttonAddEmployeeCEO" Content="Add" HorizontalAlignment="Left" Height="31" Margin="210,250,0,0" VerticalAlignment="Top" Width="61" Click="AddEmployeeButton_Click" Background="#FFEAEAEA"/>
                                                 <Label x:Name="labelPasswordCEO" Content="Password:" HorizontalAlignment="Left" Margin="5,166,0,0" VerticalAlignment="Top" Width="79" Height="26"/>
                                                 <PasswordBox x:Name="passwordBoxCEO" HorizontalAlignment="Left" Margin="75,171,0,0" VerticalAlignment="Top" Height="21" Width="134"/>
                                                 <Label Content="Username:" HorizontalAlignment="Left" Margin="5,135,0,0" VerticalAlignment="Top" Width="65"/>
@@ -159,7 +160,7 @@
                                                 <TextBox x:Name="textBoxInfoCEO" IsReadOnly="True" HorizontalAlignment="Left" Height="21" Margin="232,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="228" RenderTransformOrigin="0.51,-0.091"/>
                                                 <ComboBox x:Name="comboBoxNewPositionCEO" HorizontalAlignment="Left" Height="24" Margin="155,60,0,0" VerticalAlignment="Top" Width="134"/>
                                                 <Label x:Name="labelInfoCEO" Content="New type:" HorizontalAlignment="Left" Height="26" Margin="33,59,0,0" VerticalAlignment="Top" Width="117"/>
-                                                <Button x:Name="buttonApplyTypeChangeCEO" Content="Apply " HorizontalAlignment="Left" Height="25" Margin="395,59,0,0" VerticalAlignment="Top" Width="65" Click="ApplyTypeChangeButton_Click"/>
+                                                <Button x:Name="buttonApplyTypeChangeCEO" Content="Apply " HorizontalAlignment="Left" Height="25" Margin="395,59,0,0" VerticalAlignment="Top" Width="65" Click="ApplyTypeChangeButton_Click" Background="#FFEEEEEE"/>
                                             </Grid>
                                         </Grid>
                                     </TabItem>
@@ -202,7 +203,7 @@
                                     <TextBox x:Name="textBoxEditName" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="120,37,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142"/>
                                     <TextBox x:Name="textBoxEditSurname" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="120,65,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142"/>
                                     <TextBox x:Name="textBoxEditEmail" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="120,93,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142"/>
-                                    <Button x:Name="buttonEditdata" Content="Edit data" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="135" Height="22" Click="editData_Click"/>
+                                    <Button x:Name="buttonEditdata" Background="#FFFAFBFE" Content="Edit data" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="135" Height="22" Click="editData_Click"/>
                                     <Label x:Name="workHoursLabel1" Content="Working hours:" HorizontalAlignment="Left" Margin="10,138,0,0" VerticalAlignment="Top" Width="92" Height="28"/>
                                     <Label x:Name="workHoursLabel2" Content="To: " HorizontalAlignment="Left" Margin="73,204,0,0" VerticalAlignment="Top" Height="28"/>
                                     <TextBox x:Name="workBeginHour" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="120,171,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="40"/>
@@ -231,7 +232,7 @@
                             </Grid>
                             <TabItem.Header>
                                 <StackPanel>
-                                    <Image Name="img" Height="35" Width="35" Source="images/icon sett.png" />
+                                    <Image Name="img" Height="35" Width="35" Source="images/icon sett.png" OpacityMask="#FFBFE9F0" />
                                 </StackPanel>
                             </TabItem.Header>
                         </TabItem>
@@ -279,10 +280,10 @@
                 </Grid>
             </TabItem>
         </TabControl>
-        <Label x:Name="label1" Content="Hiring Company Employee" FontWeight="Bold" FontSize="32" HorizontalAlignment="Left" Height="53" Margin="198,21,0,0" VerticalAlignment="Top" Width="444" Foreground="#FF1F3270" Background="#FF18A6A6"/>
-        <Label Content="© Miljana e333/ Zvezdana e335" HorizontalAlignment="Left" Margin="652,542,0,0" VerticalAlignment="Top" Width="180"/>
-        <Button x:Name="signOutButton" Content="SignOut" HorizontalAlignment="Left" Margin="770,21,0,0" VerticalAlignment="Top" Width="62" Height="26" Visibility="Hidden" Click="signOutButton_Click"/>
-        <Label x:Name="nameSurnameLabel" Content="" HorizontalAlignment="Right" HorizontalContentAlignment="Right" Margin="0,21,77,0" VerticalAlignment="Top" Width="140"/>
-
+        <Label x:Name="label1" Content="Hiring Company Employee" FontWeight="Bold" FontSize="32" HorizontalAlignment="Left" Height="53" Margin="228,21,0,0" VerticalAlignment="Top" Width="444" Foreground="#FF1F3270" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+        <Label x:Name="nameSurnameLabel" Content="" HorizontalAlignment="Right" HorizontalContentAlignment="Right" Margin="0,2,84,574" VerticalAlignment="Center" Width="115" Height="24" Foreground="#FF1F3270"/>
+        <Label Content="© Miljana e333/ Zvezdana e335" HorizontalAlignment="Left" Margin="712,574,0,0" VerticalAlignment="Top" Width="180" Foreground="#FF1F3277"/>
+        <Button x:Name="signOutButton" Content="SignOut" HorizontalAlignment="Left" Margin="816,2,0,0" VerticalAlignment="Top" Width="50" Height="24" Visibility="Hidden" Click="signOutButton_Click" Background="#FFFAFBFE" BorderBrush="#FFABADB3" Foreground="#FF1F3277" FontWeight="Bold" BorderThickness="0"/>
+        <Button x:Name="closeButton" Content="X" HorizontalAlignment="Center" Height="24" Margin="869,2,1,0" VerticalAlignment="Top" Width="30" Background="#FFFAFBFE" BorderBrush="#FFACACAC" Foreground="#FF1F3270" FontWeight="Bold" Click="closeButton_Click" BorderThickness="0"/>
     </Grid>
 </Window>
